--- a/index.ipynb
+++ b/index.ipynb
@@ -21,6 +21,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -37,11 +46,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7.]\n",
+      " [7.]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[7.],\n",
+       "        [7.]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Solution:\n"
+    "# Solution:\n",
+    "\n",
+    "# Let x be the price of coffee and y be the price of tea. \n",
+    "# 29x + 41y = 490\n",
+    "# 23x + 41y = 448\n",
+    "\n",
+    "A = np.matrix([[29,41], [23,41]])\n",
+    "B = np.matrix([[490,448]])\n",
+    "\n",
+    "A_inv = np.linalg.inv(A)\n",
+    "total = A_inv.dot(B.T)\n",
+    "print(total)\n",
+    "\n",
+    "np.linalg.solve(A,B.T)"
    ]
   },
   {
@@ -50,7 +92,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Explain your answer in terms of prices\n"
+    "# Explain your answer in terms of prices\n",
+    "\n",
+    "# a bag of tea and bag of coffee both cost $7 each."
    ]
   },
   {
@@ -68,21 +112,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10.]\n",
+      " [14.]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[10.],\n",
+       "        [14.]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a system of equations\n",
-    "\n"
+    "\n",
+    "# Let x be the price per child and y be the price per adult\n",
+    "# 12x + 3y = 162 \n",
+    "# 8x + 3y = 122 \n",
+    "\n",
+    "A = np.matrix([[12,3], [8,3]])\n",
+    "B = np.matrix([[162,122]])\n",
+    "\n",
+    "A_inv = np.linalg.inv(A)\n",
+    "total = A_inv.dot(B.T)\n",
+    "print(total)\n",
+    "\n",
+    "np.linalg.solve(A,B.T)it "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Describe your result\n"
+    "# Describe your result\n",
+    "\n",
+    "# it cost $10 for children and $14 for adults."
    ]
   },
   {
@@ -104,21 +182,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2.]\n",
+      " [4.]\n",
+      " [1.]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[2.],\n",
+       "        [4.],\n",
+       "        [1.]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a system of equations\n",
-    "\n"
+    "# Let b be bananas, o be oranges and p be papayas. \n",
+    "# b + o + p = 7\n",
+    "# 0.5b + 0.75o + 1.25p = 5.25\n",
+    "# -2b + o + 0p = 0\n",
+    "\n",
+    "A = np.matrix([[1,1,1],[0.5, 0.75, 1.25], [-2,1,0]])\n",
+    "B = np.matrix([[7, 5.25, 0]])\n",
+    "\n",
+    "A_inv = np.linalg.inv(A)\n",
+    "total = A_inv.dot(B.T)\n",
+    "print(total)\n",
+    "\n",
+    "np.linalg.solve(A,B.T)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Explain your answer\n"
+    "# Explain your answer\n",
+    "\n",
+    "# it takes 2 bananas, 4 oranges and 1 papaya to make this punch."
    ]
   },
   {
@@ -140,11 +254,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[280.]\n",
+      " [400.]\n",
+      " [560.]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[280.],\n",
+       "        [400.],\n",
+       "        [560.]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Create a system of equations\n"
+    "# Create a system of equations\n",
+    "# Let x = 1 bedroom, y = 2 bedroom and z = 3 bedroom\n",
+    "# x + y + z = 1240\n",
+    "# 0.1x + 0.2y + 0.3z = 276\n",
+    "# 2x + 0y - z = 0\n",
+    "\n",
+    "A = np.matrix([[1,1,1],[0.1, 0.2, 0.3], [2,0,-1]])\n",
+    "B = np.matrix([[1240, 276, 0]])\n",
+    "\n",
+    "A_inv = np.linalg.inv(A)\n",
+    "total = A_inv.dot(B.T)\n",
+    "print(total)\n",
+    "\n",
+    "np.linalg.solve(A,B.T)"
    ]
   },
   {
@@ -153,7 +302,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Explain your answer\n"
+    "# Explain your answer\n",
+    "# 1 bedroom house's rent is $280, 2 bedroom house's rent is $400 and 3 bedroom house's rent is $560"
    ]
   },
   {
@@ -181,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
